--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
     <script href="https://ssl.google-analytics.com/ga.js"></script>
+
     <title>ST</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
     <div id="HomeSection">
         <div id="slide1">
             <div id="MyPhoto" class="os-animation animated slideInLeft" style="animation-delay: 0.5s;"></div>
-            <div id="MyName" class="os-animation animated slideInRight" style="animation-delay: 0.5s;">
+            <div id="MyName" class="os-animation animated slideInDown" style="animation-delay: 0.5s;">
                 <p id="p1MyName" align="center" class="os-animation animated slideInDown" style="animation-delay: 0.6s;">Stanislaw Baranyuk</p>
                 <hr id="hrMyName" />
                 <p id="p2MyName" align="center" class="os-animation animated slideInUp" style="animation-delay: 0.6s;">DEVELOP/DESIGN</p>
@@ -50,24 +51,24 @@
 <section id="SectionTwo">
     <div class="container">
             <!--<div id="SectionTwoHiddenCol1" class="col-md-5"></div>-->
-            <div id="AboutMe" class="col-md-5 col-sm-5 col-xs-5"><a style="text-decoration: none" href="#">About me</a></div>
-            <div id="Chat" class="col-md-6 col-sm-6 col-xs-6"><a style="text-decoration: none" href="#" >Chat</a></div>
+            <div id="AboutMe" class="col-md-5 col-sm-5 col-xs-5"><a style="text-decoration: none" href="AboutMe.html">About me</a></div>
+            <div id="Chat" class="col-md-6 col-sm-6 col-xs-6"><a style="text-decoration: none" href="Contact.html" >Contact</a></div>
             <!--<div class="col-md-5"></div>-->
     </div>
 </section>
 
-<section id="SectionThree" class="os-animation animated zoomInUp" style="animation-delay: 2s;">
+<section id="SectionThree" class="os-animation animated zoomIn" style="animation-delay: 1s;">
     <div id="ContentSection">
         <div class="container">
             <div id="RSection" class="row">
 
-                <div id="ContentBlock1" class="col-md-3 col-sm-3 col-xs-3 Content ContentInherit" onclick="location.href = 'sdsd.html'">
+                <div id="ContentBlock1" class="col-md-3 col-sm-3 col-xs-3 Content ContentInherit" onclick="location.href = 'Content/Vrols/VRols.html'">
                     <p class="ContentBlockName" align="center">VRolls</p>
                 </div>
 
                 <div  class="col-md-1 col-sm-1 col-xs-1 BetCont"></div>
 
-                <div id="ContentBlock2" class="col-md-3 col-sm-3 col-xs-3 Content ContentInherit" onclick="location.href = 'sdsd.html'">
+                <div id="ContentBlock2" class="col-md-3 col-sm-3 col-xs-3 Content ContentInherit" onclick="location.href = 'Content/Vbaik/Vbaik.html'">
                     <p class="ContentBlockName" align="center">Vbaik</p>
                 </div>
 
